--- a/tests/test-pokerbothandeval.py.in
+++ b/tests/test-pokerbothandeval.py.in
@@ -18,7 +18,7 @@
 # along with this program in a file in the toplevel directory called
 # "AGPLv3".  If not, see <http://www.gnu.org/licenses/>.
 #
-import sys
+import sys, os
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
