--- a/tests/test-pokerexplain.py.in
+++ b/tests/test-pokerexplain.py.in
@@ -1271,26 +1271,18 @@ class PokerExplainTestCase(unittest.TestCase):
         addPlayer(42, 1)
         addPlayer(43, 2)
         self.explain.explain(PacketSerial(serial = 42))
-        self.explain.explain(PacketPokerInGame(game_id = game_id,
-                                               players = [42, 43]))
+        self.explain.explain(PacketPokerInGame(game_id = game_id, players = [42, 43]))
         self.explain.explain(PacketPokerStart(game_id = game_id, hand_serial = 11))
-        self.explain.explain(PacketPokerPlayerCards(game_id = game_id,
-                                                    serial = 42,
-                                                    cards = [ 1, 2 ]))
-        self.explain.explain(PacketPokerPlayerCards(game_id = game_id,
-                                                    serial = 43,
-                                                    cards = [ 3, 4 ]))
-        self.explain.explain(PacketPokerState(game_id = game_id,
-                                              string = pokergame.GAME_STATE_PRE_FLOP))
+        self.explain.explain(PacketPokerPlayerCards(game_id = game_id, serial = 42, cards = [ 1, 2 ]))
+        self.explain.explain(PacketPokerPlayerCards(game_id = game_id, serial = 43, cards = [ 3, 4 ]))
+        self.explain.explain(PacketPokerState(game_id = game_id, string = pokergame.GAME_STATE_PRE_FLOP))
         self.explain.explain(PacketPokerCheck(game_id = game_id, serial = 43))
         self.explain.explain(PacketPokerCheck(game_id = game_id, serial = 42))
-        self.explain.explain(PacketPokerBoardCards(game_id = game_id,
-                                                   cards = [ 5, 6, 7 ]))
-        self.explain.explain(PacketPokerState(game_id = game_id,
-                                              string = pokergame.GAME_STATE_FLOP))
-        self.assertEqual(7, len(self.explain.forward_packets))
-        self.assertEqual(PACKET_POKER_PLAYER_HAND_STRENGTH, self.explain.forward_packets[2].type)
-        self.assertEqual('Flush Nine high: 9h, 8h, 7h, 4h, 3h', self.explain.forward_packets[2].hand)
+        self.explain.explain(PacketPokerBoardCards(game_id = game_id, cards = [ 5, 6, 7 ]))
+        self.assertEqual(PACKET_POKER_PLAYER_HAND_STRENGTH, self.explain.forward_packets[1].type)
+        self.assertEqual('Flush Nine high: 9h, 8h, 7h, 4h, 3h', self.explain.forward_packets[1].hand)
+        self.explain.explain(PacketPokerState(game_id = game_id, string = pokergame.GAME_STATE_FLOP))
+        self.assertEqual(6, len(self.explain.forward_packets))
 
     def test42_explain_state_flop_hand_strength_not_in_game(self):
         game_id = 1
