--- a/tests/test-pokerservice.py.in
+++ b/tests/test-pokerservice.py.in
@@ -32,16 +32,10 @@ import sys, os, tempfile, shutil
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
-import time
-
-from string import split
 import libxml2
-import random
 import locale
-import sets
 from _mysql_exceptions import IntegrityError
 import exceptions
-from pprint import pprint
 from datetime import date
 
 from tests import testclock
@@ -53,9 +47,7 @@ from twisted.python.runtime import seconds
 
 twisted.internet.base.DelayedCall.debug = True
 
-from tests.testmessages import silence_all_messages, search_output, clear_all_messages, get_messages
-#verbose = int(os.environ.get('VERBOSE_T', '-1'))
-#silence_all_messages()
+from tests.testmessages import search_output, clear_all_messages, get_messages
 
 import logging
 from tests.testmessages import TestLoggingHandler
@@ -71,24 +63,27 @@ from pokernetwork import currencyclient
 from pokernetwork import pokerdatabase
 currencyclient.CurrencyClient = currencyclient.FakeCurrencyClient
 from pokernetwork.pokerpackets import *
-from pokernetwork.packets import PacketError, PacketLogin
 from pokernetwork.pokertable  import PokerAvatarCollection
 from MySQLdb.cursors import DictCursor
 
 
 class ConstantDeckShuffler:
     def shuffle(self, what):
-        what[:] = [40, 13, 32, 9, 19, 31, 15, 14, 50, 34, 20, 6, 43, 44, 28, 29, 48, 3, 21, 45, 23, 37, 35, 11, 5, 22, 24, 30, 27, 39, 46, 33, 0, 8, 1, 42, 36, 16, 49, 2, 10, 26, 4, 18, 7, 41, 47, 17]
-
-from pokerengine import pokergame
-pokergame.shuffler = ConstantDeckShuffler()
+        what[:] = [
+            40, 13, 32,  9, 19, 31, 15, 14,
+            50, 34, 20,  6, 43, 44, 28, 29,
+            48,  3, 21, 45, 23, 37, 35, 11,
+             5, 22, 24, 30, 27, 39, 46, 33,
+             0,  8,  1, 42, 36, 16, 49,  2,
+            10, 26,  4, 18,  7, 41, 47, 17
+        ]
 
 class ConstantPlayerShuffler:
     def shuffle(self, what):
         what.sort()
 
-from pokerengine import pokertournament
 pokertournament.shuffler = ConstantPlayerShuffler()
+pokergame.shuffler = ConstantDeckShuffler()
 
 TABLE1 = 1
 TABLE2 = 2
@@ -832,8 +827,6 @@ class GetTableBestByCriteriaTestCase(PokerServiceTestCaseBase):
             table = self.service.getTable(nlHe100Currency1)
             table.game.serial2player[ii] = MockPlayerForCriteria(ii != 0)
 
-        from pokernetwork.pokertable import PokerTable
-
         foundTable = self.service.getTableBestByCriteria(99, 1, min_players = 3)
 
         self.assertEquals(foundTable, None)
@@ -1235,7 +1228,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
                             ('avatar_collection', PokerAvatarCollection()), ('simultaneous', 4),
                             ('monitors', []), ('gettextFuncs', 17) ]
         for (instanceVar, val) in startedOnlyVars:
-            self.assertEquals(self.service.__dict__.has_key(instanceVar), False)
+            self.assertEquals(instanceVar in self.service.__dict__, False)
 
         clear_all_messages()
         self.service.startService()
@@ -1243,12 +1236,12 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.failUnless(search_output("No translation for language this_locale_does_not_exist for this_locale_does_not_exist in poker-engine; locale ignored: [Errno 2] No translation file found for domain: 'poker-engine'"))
         self.failUnless(search_output('Translation setup for this_locale_does_not_exist failed.  Strings for clients requesting this_locale_does_not_exist will likely always be in English'))
         for (instanceVar, val) in startedOnlyVars:
-            self.assertEquals(self.service.__dict__.has_key(instanceVar), True)
+            self.assertEquals(instanceVar in self.service.__dict__, True)
             if instanceVar == "tables":
                 self.assertEquals(len(self.service.__dict__[instanceVar]), val)
 
         for ii in ('this_locale_does_not_exist', 'en_US.ISO-8859-1', 'fr_FR.ISO-8859-1'):
-            self.assertEquals(self.service.gettextFuncs.has_key(ii), True)
+            self.assertEquals(ii in self.service.gettextFuncs, True)
             self.assertEquals(callable(self.service.locale2translationFunc(ii)), True)
         for ii in ('this_locale_does_not_exist', 'en_US.ISO-8859-1'):
             self.assertEquals(self.service.gettextFuncs[ii]("Aces"), "Aces")
@@ -1263,7 +1256,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
 
         for str in ('extra_wait_tourney_break', 'extra_wait_tourney_start', 'extra_wait_tourney_finish'):
             if delaysValue < 0:
-                self.assertEquals(self.service.delays.has_key(str), False)
+                self.assertEquals(str in self.service.delays, False)
             else:
                 self.assertEquals(int(self.service.delays[str]), delaysValue)
 
@@ -1300,7 +1293,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.failUnless(search_output('Unable to find codeset string in language value: this_locale_does_not_exist'))
         self.failUnless(search_output("No translation for language this_locale_does_not_exist for this_locale_does_not_exist in poker-engine; locale ignored: [Errno 2] No translation file found for domain: 'poker-engine'"))
         for ii in ('en_US.ISO-8859-1', 'fr_FR.ISO-8859-1'):
-            self.assertEquals(self.service.gettextFuncs.has_key(ii), True)
+            self.assertEquals(ii in self.service.gettextFuncs, True)
         self.assertEquals(self.service.gettextFuncs['en_US.ISO-8859-1']("Aces"), "Aces")
         self.assertEquals(self.service.gettextFuncs['fr_FR.ISO-8859-1']("Aces"), "d'As")
         self.assertEquals(search_output("Unable to restore original locale: testing bad setlocale"), True)
@@ -1330,7 +1323,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.failUnless(search_output('Unable to find codeset string in language value: this_locale_does_not_exist'))
         self.failUnless(search_output("No translation for language this_locale_does_not_exist for this_locale_does_not_exist in poker-engine; locale ignored: [Errno 2] No translation file found for domain: 'poker-engine'"))
         for ii in ('en_US.ISO-8859-1', 'fr_FR.MAGIC-PIXIE-DUST'):
-            self.assertEquals(self.service.gettextFuncs.has_key(ii), True)
+            self.assertEquals(ii in self.service.gettextFuncs, True)
             self.assertEquals(self.service.gettextFuncs[ii]("Aces"), "Aces")
 
     def test00_13_anotherBadEncoding(self):
@@ -1350,7 +1343,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         self.failUnless(search_output('Unable to find codeset string in language value: .MAGIC-PIXIE-DUST'))
         self.failUnless(search_output("No translation for language .MAGIC-PIXIE-DUST for .MAGIC-PIXIE-DUST in poker-engine; locale ignored: [Errno 2] No translation file found for domain: 'poker-engine'"))
         for ii in ('en_US.ISO-8859-1', '.MAGIC-PIXIE-DUST'):
-            self.assertEquals(self.service.gettextFuncs.has_key(ii), True)
+            self.assertEquals(ii in self.service.gettextFuncs, True)
             self.assertEquals(self.service.gettextFuncs[ii]("Aces"), "Aces")
 
     def test00_14_languageEmptyStringForSeperate(self):
@@ -1807,7 +1800,7 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
             for p in client1.packets:
                 self.assertEquals(p.game_id, self.service.tables.values()[2].game.id)
             self.assertEquals(len(client1.tables), 1)
-            self.assertEquals(client1.tables.has_key(self.service.tables.values()[2].game.id), True)
+            self.assertEquals(self.service.tables.values()[2].game.id in client1.tables, True)
             self.assertEquals(client1.tables[self.service.tables.values()[2].game.id], self.service.tables.values()[2])
 
             self.assertEquals(pokertournament.TOURNAMENT_STATE_RUNNING, heads_up.state)
@@ -6365,7 +6358,7 @@ class SSLContextFactoryCoverage(unittest.TestCase):
         SSL.Context = saveContext
         shutil.rmtree(tmpdir)
 ##############################################################################
-from pokernetwork.pokerservice import PokerTree, PokerSOAP, PokerXMLRPC
+from pokernetwork.pokerservice import PokerSOAP, PokerXMLRPC
 class MockRequestBase():
     def __init__(mrSelf):
         mrSelf.method = "GET"
@@ -6387,7 +6380,7 @@ class PokerTreeCoverageTestCase(unittest.TestCase):
         pt = pokerservice.PokerTree(self.service)
         self.assertEquals(pt.service, self.service)
         for (child, cl) in [ ("RPC2", PokerXMLRPC), ("SOAP", PokerSOAP) ]:
-            self.failUnless(pt.children.has_key(child), "Missing child of PokerTree: " + child)
+            self.failUnless(child in pt.children, "Missing child of PokerTree: " + child)
             self.failUnless(isinstance(pt.children[child], cl))
             self.assertEquals(pt.getChildWithDefault(child, MockRequestBase()).service, self.service)
     # ----------------------------------------------------------------
@@ -6403,11 +6396,11 @@ class PokerTreeCoverageTestCase(unittest.TestCase):
         pt = pokerservice.PokerTree(self.service)
 
         for (childStr, cl) in [ ("RPC2", PokerXMLRPC) ]:
-            self.failUnless(pt.children.has_key(childStr), "Missing child of PokerTree: " + childStr)
+            self.failUnless(childStr in pt.children, "Missing child of PokerTree: " + childStr)
             self.failUnless(isinstance(pt.children[childStr], cl))
             self.assertEquals(pt.getChildWithDefault(childStr, MockRequestBase()).service, self.service)
 
-        self.failIf(pt.children.has_key("SOAP"), "SOAP should be disabled")
+        self.failIf("SOAP" in pt.children, "SOAP should be disabled")
         child = pt.getChildWithDefault('SOAP', MockRequestBase())
         self.assertEquals(child.code, 404)
         self.assertEquals(child.brief, 'No Such Resource')
@@ -6440,7 +6433,7 @@ class PokerRestTreeCoverageTestCase(unittest.TestCase):
         self.assertEquals(prt.verbose, self.service.verbose)
         for (child, cl) in [ ("POKER_REST", PokerResource), ("UPLOAD", PokerImageUpload),
                              ("AVATAR", PokerAvatarResource) ]:
-            self.failUnless(prt.children.has_key(child), "Missing child of PokerTree: " + child)
+            self.failUnless(child in prt.children, "Missing child of PokerTree: " + child)
             self.failUnless(isinstance(prt.children[child], cl))
             self.assertEquals(prt.getChildWithDefault(child, MockRequestBase()).service, self.service)
     # ----------------------------------------------------------------
@@ -6500,7 +6493,7 @@ class MockRequestForPokerXML():
         self.headerData = {}
 
     def setHeader(self, header, value):
-        if not self.headerData.has_key(header):
+        if header not in self.headerData:
             self.headerData[header] = []
         self.headerData[header].append(value)
 
@@ -6894,8 +6887,8 @@ def Run():
     suite.addTest(loader.loadClass(LadderTestCase))
     return runner.TrialRunner(
         reporter.VerboseTextReporter,
-#       reporter.TextReporter,
-#	tracebackFormat='verbose',
+#        reporter.TextReporter,
+#        tracebackFormat='verbose',
         tracebackFormat='default',
         ).run(suite)
 
